--- a/server/client/package.json
+++ b/server/client/package.json
@@ -7,7 +7,7 @@
     "axios": "^0.19.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
