--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/NathanKr/ExpressAndReactSimple#readme",
   "dependencies": {
-    "concurrently": "^4.1.0",
     "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "concurrently": "^5.0.2"
   }
 }
